--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,15 @@ table tbody {
 	font-weight: 350;
 }
 
+
+/* LINKS */
+
+a.disabled {
+	color: #bdbdbd;
+	user-select: none;
+}
+
+a.enabled {
+	color: rgb(3, 155, 229);
+	user-select: all;
+}
