Update class name of links in edu module

--- a/css/main.css
+++ b/css/main.css
@@ -88,12 +88,12 @@ table tbody {
 
 /* LINKS */
 
-a.disabled {
+a.edu-disabled {
 	color: #bdbdbd;
 	user-select: none;
 }
 
-a.enabled {
+a.edu-enabled {
 	color: rgb(3, 155, 229);
 	user-select: all;
 }
