Change class name of enabled/disabled links in the table of edu module

--- a/css/main.css
+++ b/css/main.css
@@ -81,12 +81,12 @@ table thead {
 
 /* LINKS */
 
-a.edu-disabled {
+a.resgen-disabled {
 	color: #bdbdbd;
 	user-select: none;
 }
 
-a.edu-enabled {
+a.resgen-enabled {
 	color: rgb(3, 155, 229);
 	user-select: all;
 }
