--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h6.resgen-title {
 	text-align: center;
-	font-size: 14px;
+	font-weight: bold;
 }
 
 
@@ -107,7 +107,7 @@ th {
 	font-weight: bold;
 }
 th, td {
-	padding: 5px;
+	padding: 7px 5px;
 }
 
 
@@ -124,6 +124,6 @@ a.resgen-enabled {
 a.resgen-simple {
 	color: rgb(3, 155, 229);
 	font-size: 12.5px;
-	font-weight: 400;
+	font-weight: bold;
 }
 
