--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 @import url("materialize.min.css");
 
 
-
 /* titles */
 
 h1, h2, h3, h4, h5, h6 {
@@ -15,22 +14,6 @@ h6.resgen-title {
 }
 
 
-
-/* tabs */
-
-div#wrap-tabs ul {
-	height: 28px;
-}
-div#wrap-tabs ul li {
-	height: 2px;
-}
-div#wrap-tabs ul li a {
-	height: 28px;
-	line-height: 28px;
-}
-
-
-
 /* fieldset */
 
 fieldset {
@@ -40,7 +23,11 @@ fieldset legend {
 	font-size: 14px;
 	font-weight: bold;
 }
-
+@media (max-width: 600px) {
+	fieldset.nested {
+		margin-bottom: 20px;
+	}
+}
 
 
 /* forms */
@@ -68,7 +55,6 @@ textarea.materialize-textarea {
 }
 
 
-
 /* helpers */
 
 span.helper-text {
@@ -80,7 +66,6 @@ span.character-counter {
 	color: rgba(0, 0, 0, 0.44); 
 	font-size: 11px !important;
 }
-
 
 
 /* buttons */
@@ -97,7 +82,6 @@ span.character-counter {
 }
 
 
-
 /* tables */
 
 table {
@@ -109,7 +93,12 @@ th {
 th, td {
 	padding: 7px 5px;
 }
-
+@media (max-width: 600px) {
+	div.table-wrapper {
+		width: 100%;
+		overflow-x: scroll;
+	}
+}
 
 
 /* links */
@@ -123,7 +112,7 @@ a.resgen-enabled {
 }
 a.resgen-simple {
 	color: rgb(3, 155, 229);
-	font-size: 12.5px;
+	font-size: 12px;
 	font-weight: bold;
 }
 
