Add RWD to basic module view

--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,8 @@ div.input-field input[type="text"] {
 	font-size: 12.5px;
 }
 textarea.materialize-textarea {
-	margin: 0 0 0 0;
-	padding-bottom: 0.25em;
+	margin: 0 0 4px 0;
+	padding-bottom: 0.5em;
 	font-size: 12.5px;
 }
 .input-field > label {
