--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 h6.resgen-title {
 	text-align: center;
-	font-weight: bold;
+	font-weight: lighter;
+	color: black;
 }
 
 
